; ModuleID = '/home/carl/AnghaBench/tig/src/extr_util.c_get_status_message.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_util.c_get_status_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SUCCESS = common dso_local global i32 0, align 4
@status_success_message = common dso_local global i32 0, align 4
@status_custom_message = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@ERROR_CUSTOM_MESSAGE = common dso_local global i32 0, align 4
@status_messages = common dso_local global i8** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_status_message(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @SUCCESS, align 4
  %7 = icmp eq i32 %5, %6
  br i1 %7, label %8, label %17

8:                                                ; preds = %1
  %9 = load i32, i32* @status_success_message, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %8
  %12 = load i8*, i8** @status_custom_message, align 8
  br label %14

13:                                               ; preds = %8
  br label %14

14:                                               ; preds = %13, %11
  %15 = phi i8* [ %12, %11 ], [ getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), %13 ]
  store i8* %15, i8** %4, align 8
  store i32 0, i32* @status_success_message, align 4
  %16 = load i8*, i8** %4, align 8
  store i8* %16, i8** %2, align 8
  br label %29

17:                                               ; preds = %1
  %18 = load i32, i32* %3, align 4
  %19 = load i32, i32* @ERROR_CUSTOM_MESSAGE, align 4
  %20 = icmp eq i32 %18, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %17
  %22 = load i8*, i8** @status_custom_message, align 8
  store i8* %22, i8** %2, align 8
  br label %29

23:                                               ; preds = %17
  %24 = load i8**, i8*** @status_messages, align 8
  %25 = load i32, i32* %3, align 4
  %26 = zext i32 %25 to i64
  %27 = getelementptr inbounds i8*, i8** %24, i64 %26
  %28 = load i8*, i8** %27, align 8
  store i8* %28, i8** %2, align 8
  br label %29

29:                                               ; preds = %23, %21, %14
  %30 = load i8*, i8** %2, align 8
  ret i8* %30
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
